0.6.7	UNRELEASED

 PERFORMANCE

  * "git:" revision specifier now avoids full branch history
    access if it can. (Jelmer Vernooij)

 DOCUMENTATION

  * Added manual page for git-remote-bzr. (Jelmer Vernooij0

 BUG FIXES

  * Support setting branch nicks. (Jelmer Vernooij, #731239)

  * Support Repository.set_make_working_trees(). (Jelmer Vernooij, #777065)

0.6.6	2011-12-15

 BUG FIXES

  * Warn about ignoring path segment parameters when using bzr
    2.4. (Jelmer Vernooij, #887785)

  * Don't request unpeeled objects, newer versions of github refuse it.
    (Jelmer Vernooij, #897951)

  * Specify proper number of arguments to action() handler.
    (Jelmer Vernooij, #894195)

  * Fix compatibility with beta 4 of bzr 2.5.
    (Jelmer Vernooij)

 FEATURES

  * New options '--git-receive-pack' and '--git-upload-pack'
    for 'bzr serve', providing support for inetd.
    (Jelmer Vernooij)

0.6.5	2011-11-08

 CHANGES

  * git-import no longer creates a deep hierarchy to store branches,
    instead it now strips the refs/heads/ prefix from ref names.
    (Jelmer Vernooij)

  * Bzr 2.3 is no longer supported. (Jelmer Vernooij)

 FIXES

  * Fix compatibility with bzr < 2.5 when used with remote repositories.
    (Jelmer Vernooij, #885566)

  * Fix git-import after branch refactoring. (Jelmer Vernooij, #886161)

  * git-import now creates colocated branches if the target bzrdir
    supports them. (Jelmer Vernooij)

0.6.4	2011-11-03

 FIXES

  * Fix and test fetching from "bzr serve --git". (Jelmer Vernooij)

  * Raise UnsupportedOperation for `Branch.revision_id_to_dotted_revno`,
    making it possible to run ``bzr tags`` against remote git repositories.
    (Jelmer Vernooij, #858942)

  * Fix compatibility with bzr < 2.5. (Jelmer Vernooij, #885566)

 FEATURES

  * Allow downloading branches over HTTP from loggerhead using the Git protocol.
    To enable, set 'http_git=True' in the branch configuration.
    (Jelmer Vernooij, #585822)

0.6.3	2011-11-01

 FIXES
